[gd_scene load_steps=9 format=3 uid="uid://c2dmlf10kpx1s"]

[ext_resource type="Script" path="res://Scripts/napkin.gd" id="1_epa7c"]
[ext_resource type="Texture2D" uid="uid://byjrgdbknu8xk" path="res://Sprites/Tissue_1.png" id="2_uoiyo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c8evu"]
atlas = ExtResource("2_uoiyo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_37vkg"]
atlas = ExtResource("2_uoiyo")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0dx2"]
atlas = ExtResource("2_uoiyo")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g501k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8evu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37vkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0dx2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_txwod"]
radius = 2.0
height = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7mw8s"]
radius = 16.0078

[node name="Napkin" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_epa7c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g501k")
autoplay = "default"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_txwod")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1.5)
shape = SubResource("CircleShape2D_7mw8s")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
